FIX: Checkbox and text are not aligned. (#6053)
alignment fix

--- a/phytoplankton-console/src/components/AppWrapper/Providers/BrowserSupportModal/index.module.less
+++ b/phytoplankton-console/src/components/AppWrapper/Providers/BrowserSupportModal/index.module.less
@@ -46,6 +46,7 @@
 
 .checkbox {
   display: flex;
+  align-items: center;
   gap: 4px;
   margin: 8px 0;
 }
